2001-02-12  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/sourcewars: Added Daemon News' "Source Wars".

2001-02-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/comicspage_ed (jeffm): Removed Jeff MacNelly thanks to Sizer.
	* lib/kingfeatures: Removed Boner's Ark, Bringing Up Father, and
	Claire and Weber.  Fixed those comics that use kingfeature2 & 3.
	* lib/heaven_and_earth (heaven): Added Heaven and Earth thanks to
	Shawn Oakey.
	* lib/mercury: Fixed broken comics & removed Ick & Mickey Mouse.
	* lib/ctoons: removed because the site's gone.
	* lib/unitedmedia: Updated thanks to Sizer.
	Comics moved here: 9 Chickweed Lane, PC N Pixel
	New comics:
	Big Nate
	Bulls and Bears
	Cheap Thrills Cuisine
	Flight Deck
	Grand Avenue
	Grandfather Clause
	Lupo Alberto
	Mr. Lowe
	Pickles
	Raising Duncan
	Randolph Itch 2:00 AM
	Reality Check
	Red and Rover
	Shirley and Son
	Soup to Nutz
	* lib/uexpress: Removed this module.
	* lib/ucomics: Moved comics from uexpress to ucomics thanks to
	Tim Kimber 
	* lib/ozy_millie (ozy): Updated for site change thanks to Sizer.

2001-02-06  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/elf_life (elf): Fixed expr to not assume the file type.
	* netcomics (skip_rli): Fixed unit var reads
	(get_comics): Changed "next RLI"s to "goto FINISH_RLI" so that all
	comics will have an rli saved.  Moved construction of the comic
	name earlier so that if skipped, it will still be done (was
	causing unit var errors in webpage creation).
	(usage): Changed usage of -a & -c.  When -c is used by itself,
	only those comics will be downloaded.  Now, -a will only forcibly
	download those comics specified with -c.  New option: -nR (alias
	for -R 0).

2001-02-04  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/exploitation (exploit): Added Exploitation Now thanks to
	Shown Oakey.
	* lib/fatjesus (fatjc): Added Fat Jesus thanks to Shawn Oakey.
	Added captions, exception list, and origin series.